--- a/main.tex
+++ b/main.tex
@@ -1,29 +1,52 @@
 \RequirePackage{snapshot}
 \documentclass[a4paper,10pt,twocolumn]{article}
-\pagestyle{plain}
-\usepackage{amsmath,amsfonts}
+% \pagestyle{plain}
+
+\ifdefined\Draft
+    % NOTE: "draft" enabled here, and not at class-level, to affect figures
+    % only.
+    %
+    % \usepackage[draft]{graphicx}
+    \setkeys{Gin}{draft=true}
+\else
+    \usepackage{graphicx}
+\fi
+
+\usepackage{amsmath}
+\usepackage[hyphens]{url}
+
+% NOTE: the following packages are to be loaded after "url"
+\usepackage[hidelinks]{hyperref}
+\usepackage{orcidlink}
+
+% NOTE: the following packages are to be loaded after: "hyperref", "amsmath"
+\usepackage{cleveref}
+
+%%%
+\usepackage{amsfonts}
+\usepackage{amssymb}
 \usepackage{algorithmic}
-\usepackage{graphicx}
 \usepackage{textcomp}
 \usepackage{xcolor}
 \usepackage{subcaption}
-\usepackage{cleveref}
 \usepackage[inline]{enumitem}
-\usepackage{todonotes}
+\usepackage{todonotes} % NOTE: use "disable" option to turn todo notes off
 \usepackage{comment}
 \usepackage{booktabs}
-\usepackage{url}
 \usepackage[htt]{hyphenat}
-\usepackage{textcomp}
+\usepackage{listings}
+\usepackage{minted}
+
+% \usepackage{lineno}
+% \modulolinenumbers[5]
+
+\presetkeys{todonotes}{inline}{}
 
 \newcommand{\midtilde}{\raisebox{-0.25\baselineskip}{\textasciitilde}}
-
-\begin{document}
 
 \title{
     Paper Title
 }
-
 \author{Giacomo Lanciano}
 % \affiliation{
 %     \institution{Scuola Normale Superiore}
@@ -33,6 +56,7 @@
 % \email{giacomo.lanciano@sns.it}
 % \orcid{0000-0002-7431-8041}
 
+\begin{document}
 \maketitle
 
 \begin{abstract}
