--- a/biblio.bib
+++ b/biblio.bib
@@ -7,8 +7,7 @@
   pages         = {1204–1206},
   numpages      = {3},
   keywords      = {self-organizing maps, network function virtualization, machine learning},
-  location      = {Brno, Czech Republic},
-  series        = {SAC '20}
+  location      = {Brno, Czech Republic}
 }
 
 @InProceedings{   Cucinotta2020Behavioral,
