main.tex: use \orcidlink

--- a/main.tex
+++ b/main.tex
@@ -45,14 +45,13 @@
 \title{
     Paper Title
 }
-\author{Giacomo Lanciano}
+\author{Giacomo Lanciano~\orcidlink{0000-0002-7431-8041}}
 % \affiliation{
 %     \institution{Scuola Normale Superiore}
 %     \city{Pisa}
 %     \country{Italy}
 % }
 % \email{giacomo.lanciano@sns.it}
-% \orcid{0000-0002-7431-8041}
 
 \begin{document}
 \maketitle
